--- a/data/arqiver.desktop
+++ b/data/arqiver.desktop
@@ -6,5 +6,5 @@ Icon=utilities-file-archiver
 Terminal=false
 Type=Application
 Categories=Utility;
-MimeType=application/x-xz-compressed-tar;application/x-lzma-compressed-tar;application/x-bzip-compressed-tar;application/x-bzip;application/x-tar;application/x-compressed-tar;application/zip;application/gzip;application/bzip;application/x-7z-compressed;application/vnd.debian.binary-package;application/x-archive;application/x-shar;application/x-rpm;application/x-source-rpm
+MimeType=application/x-xz-compressed-tar;application/x-lzma-compressed-tar;application/x-bzip-compressed-tar;application/x-bzip;application/x-tar;application/x-compressed-tar;application/zip;application/gzip;application/bzip;application/x-7z-compressed;application/vnd.debian.binary-package;application/x-archive;application/x-shar;application/x-rpm;application/x-source-rpm;
 X-KDE-StartupNotify=false
