--- a/data/arqiver.desktop
+++ b/data/arqiver.desktop
@@ -8,5 +8,5 @@ Icon=utilities-file-archiver
 Terminal=false
 Type=Application
 Categories=Utility;
-MimeType=application/x-xz-compressed-tar;application/x-lzma-compressed-tar;application/x-bzip-compressed-tar;application/x-bzip;application/x-tar;application/x-compressed-tar;application/zip;application/gzip;image/svg+xml-compressed;application/x-gzpdf;application/bzip;application/x-7z-compressed;application/vnd.debian.binary-package;application/x-archive;application/x-cpio;application/x-rpm;application/x-source-rpm;application/x-cd-image;application/x-raw-disk-image;application/x-xar;application/x-java-archive;
+MimeType=application/x-xz-compressed-tar;application/x-lzma-compressed-tar;application/x-zstd-compressed-tar;application/x-bzip-compressed-tar;application/x-bzip;application/x-tar;application/x-compressed-tar;application/zip;application/gzip;image/svg+xml-compressed;application/x-gzpdf;application/bzip;application/x-7z-compressed;application/vnd.debian.binary-package;application/x-archive;application/x-cpio;application/x-rpm;application/x-source-rpm;application/x-cd-image;application/x-raw-disk-image;application/x-xar;application/x-java-archive;
 X-KDE-StartupNotify=false
