Added option to stretch first column
Also added app icon.

--- a/data/arqiver.desktop
+++ b/data/arqiver.desktop
@@ -5,7 +5,7 @@ Comment[eo]=Qt-bazita fasado por libarchive
 Comment[pl]=Front-end do libarchive oparty o Qt
 Comment[ru]=Qt интерфейс для архиватора libarchive
 Exec=arqiver %f
-Icon=utilities-file-archiver
+Icon=arqiver
 Terminal=false
 Type=Application
 Categories=Utility;
