Enabled compilation against Qt6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,16 +7,29 @@ if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
   set(CMAKE_INSTALL_PREFIX "/usr")
 endif()
 
-set(QT_MINIMUM_VERSION "5.12.0")
+option(ENABLE_QT5 "Building Qt5 plugin." ON)
 
-find_package(Qt5Core "${QT_MINIMUM_VERSION}" REQUIRED)
-find_package(Qt5Gui "${QT_MINIMUM_VERSION}" REQUIRED)
-find_package(Qt5Widgets "${QT_MINIMUM_VERSION}" REQUIRED)
-find_package(Qt5Svg "${QT_MINIMUM_VERSION}" REQUIRED)
-find_package(Qt5DBus "${QT_MINIMUM_VERSION}" REQUIRED)
+set(QT5_MINIMUM_VERSION "5.12.0")
+set(QT6_MINIMUM_VERSION "6.3.0")
+
+if(NOT ENABLE_QT5)
+  set(QT_VERSION_MAJOR 6)
+  find_package(Qt6Core "${QT6_MINIMUM_VERSION}" REQUIRED)
+  find_package(Qt6Gui "${QT6_MINIMUM_VERSION}" REQUIRED)
+  find_package(Qt6Widgets "${QT6_MINIMUM_VERSION}" REQUIRED)
+  find_package(Qt6Svg "${QT6_MINIMUM_VERSION}" REQUIRED)
+  find_package(Qt6DBus "${QT6_MINIMUM_VERSION}" REQUIRED)
+else()
+  set(QT_VERSION_MAJOR 5)
+  find_package(Qt5Core "${QT5_MINIMUM_VERSION}" REQUIRED)
+  find_package(Qt5Gui "${QT5_MINIMUM_VERSION}" REQUIRED)
+  find_package(Qt5Widgets "${QT5_MINIMUM_VERSION}" REQUIRED)
+  find_package(Qt5Svg "${QT5_MINIMUM_VERSION}" REQUIRED)
+  find_package(Qt5DBus "${QT5_MINIMUM_VERSION}" REQUIRED)
+endif()
 
 # optional localization
-find_package(Qt5LinguistTools QUIET)
+find_package(Qt${QT_VERSION_MAJOR}LinguistTools QUIET)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
@@ -24,11 +37,11 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
-                    ${Qt5Core_INCLUDE_DIRS}
-                    ${Qt5Gui_INCLUDE_DIRS}
-                    ${Qt5Widgets_INCLUDE_DIRS}
-                    ${Qt5Svg_INCLUDE_DIRS}
-                    ${Qt5DBus_INCLUDE_DIRS})
+                    ${Qt${QT_VERSION_MAJOR}Core_INCLUDE_DIRS}
+                    ${Qt${QT_VERSION_MAJOR}Gui_INCLUDE_DIRS}
+                    ${Qt${QT_VERSION_MAJOR}Widgets_INCLUDE_DIRS}
+                    ${Qt${QT_VERSION_MAJOR}Svg_INCLUDE_DIRS}
+                    ${Qt${QT_VERSION_MAJOR}DBus_INCLUDE_DIRS})
 
 add_definitions(-DDATADIR="${CMAKE_INSTALL_PREFIX}/share")
 
@@ -45,27 +58,35 @@ set(arqiver_RESOURCES data/arq.qrc)
 set(DESKTOP_FILE data/arqiver.desktop)
 set(ICON_FILE data/icons/arqiver.svg)
 
-if(CMAKE_VERSION VERSION_LESS "3.10.0") # CMP0071 in 3.10: Let AUTOMOC and AUTOUIC process GENERATED files
-  qt5_wrap_cpp(EXTRA_HEADERS label.h lineedit.h)
-else()
+if(QT_VERSION_MAJOR EQUAL 6)
   set(EXTRA_HEADERS label.h lineedit.h)
+else()
+  if(CMAKE_VERSION VERSION_LESS "3.10.0") # CMP0071 in 3.10: Let AUTOMOC and AUTOUIC process GENERATED files
+    qt5_wrap_cpp(EXTRA_HEADERS label.h lineedit.h)
+  else()
+    set(EXTRA_HEADERS label.h lineedit.h)
+  endif()
 endif()
 
 # translations
-if(Qt5LinguistTools_FOUND)
+if(Qt${QT_VERSION_MAJOR}LinguistTools_FOUND)
   file(GLOB TS_FILES data/translations/arqiver_*.ts)
-  qt5_add_translation(QM_FILES ${TS_FILES})
+  if(QT_VERSION_MAJOR EQUAL 6)
+    qt6_add_translation(QM_FILES ${TS_FILES})
+  else()
+    qt5_add_translation(QM_FILES ${TS_FILES})
+  endif()
   add_executable(arqiver ${arqiver_SRCS} ${arqiver_RESOURCES} ${EXTRA_HEADERS} ${DESKTOP_FILE} ${QM_FILES})
   install(FILES ${QM_FILES} DESTINATION "${CMAKE_INSTALL_PREFIX}/share/arqiver/translations")
-else(Qt5LinguistTools_FOUND)
+else(Qt${QT_VERSION_MAJOR}LinguistTools_FOUND)
   add_executable(arqiver ${arqiver_SRCS} ${arqiver_RESOURCES} ${EXTRA_HEADERS} ${DESKTOP_FILE})
-endif(Qt5LinguistTools_FOUND)
+endif(Qt${QT_VERSION_MAJOR}LinguistTools_FOUND)
 
-target_link_libraries(arqiver ${Qt5Core_LIBRARIES}
-                              ${Qt5Gui_LIBRARIES}
-                              ${Qt5Widgets_LIBRARIES}
-                              ${Qt5Svg_LIBRARIES}
-                              ${Qt5DBus_LIBRARIES})
+target_link_libraries(arqiver ${Qt${QT_VERSION_MAJOR}Core_LIBRARIES}
+                              ${Qt${QT_VERSION_MAJOR}Gui_LIBRARIES}
+                              ${Qt${QT_VERSION_MAJOR}Widgets_LIBRARIES}
+                              ${Qt${QT_VERSION_MAJOR}Svg_LIBRARIES}
+                              ${Qt${QT_VERSION_MAJOR}DBus_LIBRARIES})
 
 # installation
 install(TARGETS arqiver RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
